<!--
  ~ Copyright (c) 2015. Keyboard Warriors (Alex Hong, Daniel Khieuson, David Kim, Viet Nguyen).
  ~ This file is part of GeoTracker.
  ~ GeoTracker cannot be copied and/or distributed without the express permission
  ~ of Keyboard Warriors.
  -->

<resources>
    <string name="app_name">GeoTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_user_id">Enter user id (email)</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_user">Create new user</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="view_data">View Movement Data</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="conf_password">Confirm password</string>
    <string name="enter_sec_question">Enter security question</string>
    <string name="enter_answer">Enter answer</string>
    <string name="agreement">By clicking I Accept, you confirm that you read and understood the agreement</string>
    <string name="accept">I Accept</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="email_hint">Enter your email address</string>
    <string name="old_pass_hint">Old Password</string>
    <string name="new_pass_hint">New Desired Password</string>
    <string name="repeated_pass_hint">Repeat New Password</string>
    <string name="email">email</string>
    <string name="title_activity_pick_date">Pick Date</string>
    <string name="title_activity_view_map">View Map</string>
    <string name="password_retrieval">Password Retrieval</string>
    <string name="user_id">User ID</string>
    <string name="current_user"></string>
    <string name="password">Password</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_email_sent">Email Sent</string>
    <string name="no_blank">Cannot leave it blank</string>
    <string name="wrong_password">The password is incorrect</string>
    <string name="no_such_email">Email does not exist</string>
    <string name="curr_userID">curr_userID</string>
    <string name="curr_pass">curr_pass</string>
    <string name="no_check">Check \'I Accept\' to continue</string>
    <string name="no_match">Password mismatch</string>
    <string name="short_password">Passwords must be longer than 5 characters</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="email_sent">The password has been sent to your email.</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="try_again">Try Again</string>
    <string name="txt_securityQuest">Select a security question from the menu</string>
    <string-array name="arr_securityQuest">
        <item>What is your favorite pet\'s name?</item>
        <item>What was your favorite food as a child?</item>
        <item>What was your childhood nickname?</item>
        <item>Who is your childhood sports hero?</item>
        <item>What is your favorite color?</item>
    </string-array>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="dialog_validate_email">Validate your email to register</string>
    <string name="title_activity_show_movement_data">ShowMovementDataActivity</string>
    <string name="preference">Settings</string>
    <string name="title_activity_user_preference">Settings</string>
    <array name="sampling_interval_array">
        <item name="ten_sec">10 seconds</item>
        <item name="thirty_sec">30 seconds</item>
        <item name="one_min">1 minute</item>
        <item name="two_min">2 minutes</item>
        <item name="five min">5 minutes</item>
    </array>
</resources>
