<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/reg_scrollView"
    android:scrollbars="vertical" >

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reg_email" 
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:hint="@string/enter_user_id" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_password"
        android:layout_below="@id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/conf_password"
        android:layout_below="@id/reg_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/conf_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/sec_question"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_sec_question"
        android:layout_below="@id/conf_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/sec_answer"
        android:hint="@string/enter_answer"
        android:layout_below="@id/sec_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/agreement"
        android:layout_margin="20dp"
        android:layout_below="@id/sec_answer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/agreement" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/accept_checkBox"
        android:layout_below="@id/agreement"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:id="@+id/reg_continue"
        android:layout_below="@id/accept_checkBox"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/reg_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/agreement"
        android:layout_alignEnd="@id/agreement" />

</RelativeLayout>
 </ScrollView>

