<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user_id"
        android:id="@+id/txt_user_id"
        android:layout_marginTop="94dp"
        android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/user_name"
        android:layout_alignStart="@+id/user_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_user_id"
        android:ems="10"
        android:id="@+id/user_name"
        android:layout_below="@+id/txt_user_id"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/txt_password"
        android:layout_below="@+id/user_name"
        android:layout_alignLeft="@+id/user_name"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/enter_password"
        android:layout_below="@+id/txt_password"
        android:layout_alignLeft="@+id/txt_password"
        android:layout_alignStart="@+id/txt_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        android:layout_below="@id/password"
        android:layout_alignLeft="@id/password"
        android:layout_alignStart="@id/password"
        android:layout_marginTop="48dp"
        android:textColor="#ff1334ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:id="@+id/create_user"
        android:layout_below="@id/forgot_password"
        android:layout_alignLeft="@id/forgot_password"
        android:layout_alignStart="@id/forgot_password"
        android:textColor="#ff1334ff"
        android:linksClickable="true"
        android:clickable="false"
        android:focusable="true" />






</RelativeLayout>
